# mlx-jaccl-cluster

./: .gitignore  Makefile  README.md  SESSION_NOTES.md  check_ibv.py  pyproject.toml  test_dist.py  test_env.py
docs/: from-scratch.md
hostfiles/: 2-node-test.json  3-node.json  hosts-1node.json  hosts-2node.json  jaccl-auto.json  m3-ultra-jaccl.template.json  ms2-first.json  ring-test.json
scripts/: bootstrap_node.sh  cluster_info.sh  jaccl_tps_bench.py  macmon_fmt.py  rdma_test.py  run_openai_cluster_server.sh  setup.sh  stop_openai_cluster_server.sh  sync_nodes.sh  verify_cluster.sh
server/: dashboard.py  openai_cluster_server.py
