[project]
name = "mlx-jaccl-cluster"
version = "0.1.0"
description = "Multi-Mac MLX cluster using JACCL (RDMA over Thunderbolt) with OpenAI-compatible server"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.30.4",
    "mlx-lm>=0.30.5",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "transformers>=4.50.0",
    "tokenizers",
    "mistral_common",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[dependency-groups]
dev = [
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
